--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,20 @@
             <version>7.7.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.uncommons</groupId>
+            <artifactId>reportng</artifactId>
+            <version>1.1.4</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.2.2</version>
+        </dependency>
     </dependencies>
+
 
 </project>
